fix page jump when ban is clicked

--- a/umibukela/static/stylesheets/app.scss
+++ b/umibukela/static/stylesheets/app.scss
@@ -60,7 +60,7 @@ $font-family-sans-serif-2: "Montserrat", Helvetica, Arial, sans-serif !default;
 $font-family-sans-serif-3: "Noto Sans", Helvetica, Arial, sans-serif !default;
 $font-family-base: $font-family-sans-serif-3 !default;
 
-$font-size-base: 16px !default;
+$font-size-base: 14px !default;
 
 $text-color: $black !default;
 
@@ -217,7 +217,7 @@ h1,h2,h3,h4,h5,h6{ margin-top: 0; }
 .site-header .navbar{
   border: 0;
   font-family: $font-family-sans-serif-3;
-  font-size: 16px;
+  font-size: 13px;
   font-weight: normal;
   line-height: 12px;
   -moz-box-shadow: inset 0 -4px 0 rgba(0,0,0,0.2);
@@ -764,7 +764,7 @@ article.general {
   }
   &.btn-primary:active {
     background-color: $link-hover-color;
-    margin-top: 3px;
+    margin-top: 0;
     margin-bottom: 0;
     box-shadow: 0 1px 0 darken($link-hover-color,10%);
     outline: 0;
